@@ -10,6 +10,7 @@ Global.Period: p13tev
 Global.cutfile: ZeroLeptonRun2/data/cutfile8TeV.dat
 Global.JetCollectionKey: AntiKt4LCTopoJets
 Global.ElectronContainerKey: ElectronCollection
+Global.PhotonContainerKey: PhotonCollection
 Global.JESNuisanceParameterSet: 0
 Global.DerivationTag: p1872
 
@@ -58,6 +59,7 @@ susyobjs.Period: %{Global.Period}
 susyobjs.IsAtlfast: %{Global.IsAtlfast}
 susyobjs.JESNuisanceParameterSet: %{Global.JESNuisanceParameterSet}
 susyobjs.ElectronContainerKey: %{Global.ElectronContainerKey}
+susyobjs.PhotonContainerKey: %{Global.PhotonContainerKey}
 
 # ---------------------------  Signal Region -----------------
 sr.IsData: %{Global.IsData}
@@ -103,6 +105,7 @@ susyobjsy.suffix: cry
 susyobjsy.UseSystematics: TRUE
 susyobjsy.JESNuisanceParameterSet: %{Global.JESNuisanceParameterSet}
 susyobjsy.ElectronContainerKey: %{Global.ElectronContainerKey}
+susyobjsy.PhotonContainerKey: %{Global.PhotonContainerKey}
 
 # ---------------------------  CRY Region -----------------
 cry.IsData: %{Global.IsData}
