@@ -2,6 +2,7 @@
 	* MCEventVeto: add option for container key
 	* PileUpRWProcessor: no pileup reweighting for mc15_13TeV
 	* BuildSUSYObjects, config files: add option for Electron container key
+	* BuildSUSYObjects, config files: add option for Photon container key
 
 21-May-2015 Laurent Duflot
 	* PhysObjProxyUtils: bug fix in protection against events with <2 jets
